[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="texto" type="Button" parent="."]
margin_left = 464.0
margin_top = 448.0
margin_right = 577.0
margin_bottom = 503.0
rect_pivot_offset = Vector2( 57, 15 )
text = "Texto"

[node name="lista" type="Button" parent="."]
margin_left = 656.0
margin_top = 448.0
margin_right = 769.0
margin_bottom = 503.0
rect_pivot_offset = Vector2( 73, 0 )
text = "Lista"

[node name="lista_user" type="Button" parent="."]
margin_left = 64.0
margin_top = 240.0
margin_right = 177.0
margin_bottom = 295.0
rect_pivot_offset = Vector2( 73, 0 )
text = "Lista"

[node name="text_user" type="Button" parent="."]
margin_left = 272.0
margin_top = 240.0
margin_right = 385.0
margin_bottom = 295.0
rect_pivot_offset = Vector2( 73, 0 )
text = "Texto"

[node name="dado1" type="LineEdit" parent="."]
margin_left = 64.0
margin_top = 320.0
margin_right = 192.0
margin_bottom = 448.0
rect_pivot_offset = Vector2( 80, 40 )

[node name="dado2" type="LineEdit" parent="."]
margin_left = 256.0
margin_top = 320.0
margin_right = 384.0
margin_bottom = 448.0
rect_pivot_offset = Vector2( 80, 40 )

[node name="label1" type="Label" parent="."]
margin_left = 72.0
margin_top = 192.0
margin_right = 378.0
margin_bottom = 223.0
rect_pivot_offset = Vector2( 328, 32 )
text = "Para obter uma lista ou texto escreva no quadro
 e clique no botão correspondente."
align = 1
valign = 1

[node name="label2" type="Label" parent="."]
margin_left = 448.0
margin_top = 392.0
margin_right = 790.0
margin_bottom = 423.0
rect_pivot_offset = Vector2( 328, 32 )
text = "Para que o programa faça um texto ou lista para você,
 apenas aperte o botão correspondente:"
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 448.0
margin_top = 192.0
margin_right = 768.0
margin_bottom = 344.0

[node name="lab3" type="RichTextLabel" parent="ColorRect"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 64.0
margin_top = 40.0
margin_right = 256.0
margin_bottom = 110.0
tab_size = 1

[connection signal="pressed" from="texto" to="." method="_on_text_pressed"]
[connection signal="pressed" from="lista" to="." method="_on_lista_pressed"]
[connection signal="pressed" from="lista_user" to="." method="_on_lista_user_pressed"]
[connection signal="pressed" from="text_user" to="." method="_on_text_user_pressed"]
